[package]
name = "eh-crawler"
version = "0.5.1"
authors = ["pastchick3 <pastchick3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1.9", features = ["full"] }
reqwest = "0.11"
scraper = "0.12"
regex = "1.5"
sanitize-filename = "0.3"
futures = "0.3"
lazy_static = "1.4"
