[package]
name = "h-crawler"
version = "0.6.0"
authors = ["pastchick3 <pastchick3@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
kuchiki = "0.8.1"
lazy_static = "1.4.0"
regex = "1.5.4"
sanitize-filename = "0.3.0"
serde_json = "1.0.79"
toml = "0.5.8"
ureq = "2.4.0"
