[package]
name = "h-crawler"
version = "0.6.2"
authors = ["pastchick3 <pastchick3@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
env_logger = "0.9.0"
kuchiki = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["blocking"] }
sanitize-filename = "0.3.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
toml = "0.5.8"
